--- a/script.ipynb
+++ b/script.ipynb
@@ -494,56 +494,49 @@
    "outputs": [],
    "source": [
     "#PRESENT PERFECT CONTINUOUS\n",
-    "def on_match_ppc(matcher, doc, id, matches):\n",
-    "        print(\"PRESENT PERFECT CONTINUOUS\")\n",
-    "matcher.add('PPC',on_match_ppc,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PPC',on_match_ppc,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "\n",
+    "from spacy.matcher import Matcher\n",
+    "def on_matchppct(matcher, doc, id, matches):\n",
+    "    print(\"PRESENT PERFECT CONTINUOUS\")\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PPCT',on_matchppct,[{'TAG':'MD','OP':'!'},{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
     "#PRESENT PERFECT\n",
-    "def on_match_ppt(matcher, doc, id, matches):\n",
-    "        print(\"Present perfect\")\n",
-    "matcher.add('PPT',on_match_ppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "matcher.add('PPT',on_match_ppt,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "\n",
+    "def on_matchppt(matcher, doc, id, matches):\n",
+    "    print(\"Present perfect\")\n",
+    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'},{'TAG':'VBG','OP':'!'}])\n",
+    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'},{'TAG':'VBG','OP':'!'}])\n",
     "#PRESENT CONTINUOUS\n",
-    "def on_match_pc(matcher, doc, id, matches):\n",
+    "def on_matchpc(matcher, doc, id, matches):\n",
     "        print(\"PRESENT CONTINUOUS\")\n",
-    "matcher.add('PC',on_match_pc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PC',on_match_pc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PC',on_match_pc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
-    "\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
     "#PAST PERFECT\n",
-    "def on_match_pastpt(matcher, doc, id, matches):\n",
+    "def on_match_pastperf(matcher, doc, id, matches):\n",
     "    print(\"PAST PERFECT\")\n",
-    "matcher.add('PASTPT',on_match_pastpt,[{\"LOWER\":\"had\"},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'}])\n",
-    "\n",
+    "matcher.add('PASTPERF',on_match_pastperf,[{\"TEXT\":\"had\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'},{'TAG':'VBG','OP':'!'}])\n",
     "#PAST CONTINUOUS\n",
-    "def on_match_pastc(matcher, doc, id,matches):\n",
-    "    print(\"PAST CONTINUOUS\")\n",
-    "matcher.add('PASTC',on_match_pastc,[{\"LOWER\":\"was\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
-    "matcher.add('PASTC',on_match_pastc,[{\"LOWER\":\"were\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
-    "\n",
+    "def on_match_pastcont(matcher, doc, id,matches):\n",
+    "    print(\"past continuous\")\n",
+    "matcher.add('PASTCONT',on_match_pastcont,[{\"LOWER\":\"was\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "matcher.add('PASTCONT',on_match_pastcont,[{\"LOWER\":\"were\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
     "#PAST PERFECT CONTINUOUS\n",
     "def on_match_pastpc(matcher, doc, id, matches):\n",
     "    print(\"PAST PERFECT CONTINUOUS\")\n",
     "matcher.add('PASTPC',on_match_pastpc,[{\"LOWER\":\"had\"},{'DEP':'neg','OP':'?'},{\"LOWER\":\"been\"},{'TAG':'VBG'}])\n",
     "matcher.add('PASTPC',on_match_pastpc,[{\"LOWER\":\"had\"},{'DEP':'det','OP':'?'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"been\"},{'TAG':'VBG'}])\n",
-    "\n",
     "#FUTURE SIMPLE\n",
     "def on_match_futsim(matcher, doc, id, matches):\n",
     "    print(\"FUTURE SIMPLE\")\n",
-    "matcher.add('FUTSIM',on_match_futsim,[{'TAG':'MD'},{\"LOWER\":\"be\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"be\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\",'OP':'!'},{'TAG':'VB'}])\n",
-    "\n",
+    "matcher.add('FUTSIM',on_match_futsim,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{'TAG':'VB'},{'DEP':'aux','OP':'!'}])\n",
     "#FUTURE CONTINUOUS\n",
-    "def on_match_futc(matcher, doc, id, matches):\n",
+    "def on_match_futcont(matcher, doc, id, matches):\n",
     "    print(\"FUTURE CONTINUOUS\")\n",
-    "matcher.add('FUTC',on_match_futc,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\"},{'TAG':'VBG'}])\n",
-    "\n",
+    "matcher.add('FUTCONT',on_match_futcont,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\"},{'TAG':'VBG'}])\n",
     "#FUTURE PERFECT\n",
-    "def on_match_futpt(matcher, doc, id, matches):\n",
-    "    print(\"FUTURE PERFECT\")\n",
-    "matcher.add('FUTPT',on_match_futpt,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{\"LOWER\":\"been\",'OP':'!'},{'TAG':'VBN'}])\n",
-    "\n",
+    "def on_match_futperf(matcher, doc, id, matches):\n",
+    "    print(\"future perfect\")\n",
+    "matcher.add('FUTPERF',on_match_futperf,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{'TAG':'VBN'},{'TAG':'VBG','OP':'!'}])\n",
     "#FUTURE PERFECT CONTINUOUS\n",
     "def on_match_futpc(matcher, doc, id, matches):\n",
     "    print(\"FUTURE PERFECT CONTINUOUS\")\n",
@@ -552,7 +545,7 @@
     "def tense_form(text):\n",
     "    matches = matcher(text)\n",
     "\n",
-    "dd = nlp(\"He has been reading the book for two hours. He has finished his homework.\")\n",
+    "dd = nlp(\"He will not buy a car. They will have been living in Paris for five years \")\n",
     "# ding = nlp(\"He has been reading the book for two hours.\")\n",
     "# dong = nlp(\"He has finished his homework.\")\n",
     "\n",
@@ -565,6 +558,57 @@
     "#tense_form(\"He has finished his homework.\")\n",
     "#tense_form(dong)\n",
     "#matches = matcher(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPERATIVE SENTENCES\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "sent=(\"What Is a Declarative Sentence?\")\n",
+    "document=nlp(sent)\n",
+    "def func1(tagged):\n",
+    "    if(tagged[-2]!=\"?\"):\n",
+    "        if(tagged[1]==\"VB\" or tagged[1]==\"MD\"):\n",
+    "            return True\n",
+    "        \n",
+    "tagged=tuple()\n",
+    "for word in document:\n",
+    "    tagged=tagged+((word.text,word.tag_))\n",
+    "if func1(tagged):\n",
+    "    print(\"imperative\")\n",
+    "#NEGATIVE\n",
+    "def is_negative(matcher, doc, id, matches):\n",
+    "    print(\"negative sentence\")\n",
+    "matcher.add('ISNEG',is_negative,[{'DEP':'neg'}])\n",
+    "matches = matcher(document)\n",
+    "#SUBJECT,OBJECT,VERB\n",
+    "for word in document:\n",
+    "    if(word.dep_=='nsubj'):\n",
+    "        print(\"subject: \",word)\n",
+    "    if(word.pos_=='VERB'):\n",
+    "        print(\"verb: \",word)\n",
+    "    if(word.dep_=='dobj'):\n",
+    "        print(\"object: \",word)\n",
+    "    if(word.pos_=='ADV'):\n",
+    "        print(\"Adverb: \",word)\n",
+    "    if(word.pos_=='ADJ'):\n",
+    "        print(\"Adjective: \",word)\n",
+    "#EXCALMATIVE\n",
+    "if(document[-1].pos_=='PUNCT'):\n",
+    "    if(document[-1].text=='!'):\n",
+    "        print(\"Exclamative sentence.\")\n",
+    "#DECLARATIVE\n",
+    "if(document[-1].pos_=='PUNCT'):\n",
+    "    if(document[-1].text=='.'):\n",
+    "        print(\"Declarative sentence.\")\n",
+    "#INTERROGATIVE\n",
+    "if(document[-1].pos_=='PUNCT'):\n",
+    "    if(document[-1].text=='?'):\n",
+    "        print(\"Interrogative sentence.\")"
    ]
   },
   {
@@ -897,13 +941,6 @@
     "    plac.call(main)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -922,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8rc1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
